// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters can be used 1`] = `
{
  "filename": "index.test.js",
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "filename": "index.test.js",
        "line": 2,
        "nodes": [
          {
            "attrs": [],
            "block": {
              "filename": "index.test.js",
              "line": 3,
              "nodes": [
                {
                  "column": 5,
                  "filename": "index.test.js",
                  "line": 4,
                  "type": "Text",
                  "val": "Filters can be used.",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "index.test.js",
            "line": 3,
            "name": "custom",
            "type": "Text",
            "val": "BEGINFilters can be used.END",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "index.test.js",
      "isInline": false,
      "line": 2,
      "name": "p",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`filters can be used with options 1`] = `
{
  "filename": "index.test.js",
  "line": 0,
  "nodes": [
    {
      "attributeBlocks": [],
      "attrs": [],
      "block": {
        "filename": "index.test.js",
        "line": 2,
        "nodes": [
          {
            "attrs": [
              {
                "column": 24,
                "filename": "index.test.js",
                "line": 3,
                "mustEscape": true,
                "name": "option",
                "val": "value",
              },
              {
                "column": 36,
                "filename": "index.test.js",
                "line": 3,
                "mustEscape": true,
                "name": "number",
                "val": "2",
              },
            ],
            "block": {
              "filename": "index.test.js",
              "line": 3,
              "nodes": [
                {
                  "column": 5,
                  "filename": "index.test.js",
                  "line": 4,
                  "type": "Text",
                  "val": "Filters can be used with options.",
                },
                {
                  "column": 1,
                  "filename": "index.test.js",
                  "line": 5,
                  "type": "Text",
                  "val": "
",
                },
                {
                  "column": 5,
                  "filename": "index.test.js",
                  "line": 5,
                  "type": "Text",
                  "val": "The values aren't parsed though.",
                },
                {
                  "column": 1,
                  "filename": "index.test.js",
                  "line": 6,
                  "type": "Text",
                  "val": "
",
                },
                {
                  "column": 5,
                  "filename": "index.test.js",
                  "line": 6,
                  "type": "Text",
                  "val": "They're just strings.",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "index.test.js",
            "line": 3,
            "name": "custom-with-options",
            "type": "Text",
            "val": "BEGIN OPTIONSFilters can be used with options.
The values aren't parsed though.
They're just strings.END OPTIONS",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "index.test.js",
      "isInline": false,
      "line": 2,
      "name": "p",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;
